# alpargatas-insights

./: .env.example  .gitignore  DesafioInfraestrutura.ipynb  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-check.yml  build_and_push.yml  code_quality.yml  data-validation.yml  discord_notifier.yml  run-tests.yml
Extraction/: Extraction_Data.py
Transform/: Transform_basic_infra.py
client/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
client/src/: App.tsx  changey-markercluster.d.ts  index.css  main.tsx  vite-env.d.ts
client/src/hooks/: useClickOutside.ts
docs/: 01PF-Projeto_ Definição, Módulos, Arquitetura e Roadmap.md  API-endpoint-map.md  DATA_SETUP.md  architecture.md  data_governance.md  endpointsMVP.md  relatoriotecnico.md
docs/contracts/: contratoApiSchool.md  contratoapidashboard.md
etl/: Dockerfile  pyproject.toml
etl/config/: pipeline_config.yml
etl/data/raw/: escolas_paraiba_sample.parquet
etl/scripts/: 01_extract.py  02_transform.py  Extraction_Data.py  Load_advanced_infra.py  Load_basic_infra.py  Transform_advanced_infra.py  Transform_basic_infra.py  extract.py  gerar_dataset_final.py  load.py  professor_pipeline.py  transform.py  validate_processed_data.py
etl/src/common/: database.py  utils.py
etl/src/jobs/enriquecimento_pipeline/: extract.py  main.py  transform.py
etl/src/jobs/escolas_pipeline/: extract.py  load.py  main.py  transform.py  validate.py
etl/tests/: test_transform.py
server/: .eslintrc.json  Dockerfile  eslint.config.cjs  eslint.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  server.ts
(+137 files in other folders)
