[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL pipeline for Alpargatas Insight project."
authors = ["Brenno Henrique <brennohdev@gmail.com>"]
readme = "README.md"
package-mode = false # Agora está no lugar certo!

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.3.1,<3.0.0"
pymongo = ">=4.13.2,<5.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pyarrow = "^21.0.0"
requests = "^2.32.4"
normalizer = "^0.2.1"
pathlib = "^1.0.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] 
ignore = []

[tool.ruff.format]
quote-style = "double"