[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL pipeline for Alpargatas Insight project."
authors = ["Brenno Henrique <brennohdev@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.3.1,<3.0.0"
pymongo = ">=4.13.2,<5.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pyarrow = "^21.0.0"
requests = "^2.32.4"
normalizer = "^0.2.1"
pathlib = "^1.0.1"
dotenv = "^0.9.9"
geopy = "^2.4.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
fastparquet = "^2024.11.0"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
unidecode = "^1.4.0"
adjusttext = "^1.3.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0" 
pytest = "^8.4.1"
pandera = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"